# qt5-eeg-filters

./: .dockerignore  .gitignore  LICENSE  README.md  controllers.py  docker-compose.yml  handlers.py  install.sh  main.py  points.py  pyproject.toml  requirements.txt  settings.py  start.sh  ui.py  upgrade.sh  views.py
docker/: Dockerfile  start.sh
scripts/: build_docker_container.sh  build_push_docker_container.sh  install.sh  install_docker.sh  start.sh  start_with_docker.sh  upgrade.sh
src/: controllers.py  handlers.py  main.py  models.py  passband_searcher.py  points.py  qt5_waiting_spinner.py  settings.py  ui.py  views.py
src/ep_bandpass_filter_selector/: __init__.py  selector.py
