[tool.poetry]
name = "qt5-eeg-filters"
version = "0.1.0"
description = ""
authors = ["Yaroslav Pisarev"]
license = "ISP"

[tool.poetry.dependencies]
python = "^3.6.9"
pyqtgraph = "^0.11.0"
eeg-filters = "^0.0.7"
PyQt5 = "^5.15.1"
loguru = "^0.5.3"
pandas = "^1.1.3"
numpy = "^1.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true

