[tool.poetry]
name = "qt5-eeg-filters"
version = "0.1.0"
description = ""
authors = ["Yaroslav Pisarev"]
license = "ISP"

[tool.poetry.dependencies]
python = "^3.8"
eeg-filters = "^0.0.7"
PyQt5 = "5.15.1"
loguru = "^0.5.3"
pandas = "^1.1.3"
numpy = "^1.19.2"
ep-bandpass-filter-selector = "^0.0.2"
pyqt5-sip = "12.8.1"
pyqtgraph = "^0.13.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true

